--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ plugins:
 
 title: Alban's homepage
 description: Bookmark this to keep an eye on my project updates !
+
+# Title
+name: Alban Steff - Data Science projects
