--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,5 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: Alban's homepage
-description: Bookmark this to keep an eye on my project updates !
-
-# Title
-name: Alban Steff - Data Science projects
+title: Alban Steff - Data Science projects
+description: A selection of wonderful projects.
