--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Alban Steff - Data Science projects
+description: A selection of wonderful projects.
+
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
