--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ description: A selection of wonderful projects.
 
 online_presence:
   show_online_presence: true
-  kaggle_url: 
-  linkedin_url: 
+  kaggle_url: https://www.kaggle.com/albansteff
+  linkedin_url: https://www.linkedin.com/in/alban-steff-260ab715b/
 
 github:
   is_project_page: true
