--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Alban Steff - Data Science projects
-description: A selection of wonderful projects.
+title: Alban Steff - Data Scientist
+description: Let's bring AI further.
 
 online_presence:
   show_online_presence: true
